--- a/package.json
+++ b/package.json
@@ -20,14 +20,19 @@
     "@uploadthing/react": "^7.3.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
+    "date-fns": "^2.30.0",
     "framer-motion": "^12.23.3",
     "langchain": "^0.3.29",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^1.1.1",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.6",
+    "svix": "^1.69.0",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.3",
     "zod": "^3.23.8"
@@ -35,6 +40,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.0",
     "@tailwindcss/postcss": "^4.0.0",
+    "@types/date-fns": "^2.5.3",
     "@types/node": "^20.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
