--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["dom", "dom.iterable", "esnext"],              // ✅ ensures JSX.Element is available
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -11,18 +11,24 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",                                     // ✅ updated for React 17+ JSX transform
     "incremental": true,
-    "baseUrl": ".",                     // 👈 REQUIRED!
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
     },
+    "types": ["react"],                                     // ✅ add this to load React types
     "plugins": [
       {
         "name": "next"
       }
     ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
